--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
         <button class="item item7" value="7">7</button>
         <button class="item item8" value="8">8</button>
         <button class="item item9" value="9">9</button>
-        <button class="item" value="/">/</button>
+        <button class="operator" value="/">/</button>
         <button class="item item5" value="4">4</button>
         <button class="item item6" value="5">5</button>
         <button class="item item7" value="6">6</button>
-        <button class="item" value="*">*</button>
+        <button class="operator" value="*">*</button>
         <button class="item item3" value="1">1</button>
         <button class="item item2" value="2">2</button>
         <button class="item item1" value="3">3</button>
-        <button class="item" value="-">-</button>
+        <button class="operator" value="-">-</button>
         <button class="item item0" value="0">0</button>
-        <button class="item" value="+">+</button>
-        <button class="item operate" value="=">=</button>
+        <button class="operator" value="+">+</button>
+        <button class="operate" value="=">=</button>
     </div>
     <script src="script.js"></script>
 </body>
