--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
         </div>        
         <button class="clear" value="clear">C</button>        
         <div> </div>
-        <div> </div>
-        <div></div>        
+        <button class="operator" value="/">/</button>        
         <button class="item item7" value="7">7</button>
         <button class="item item8" value="8">8</button>
         <button class="item item9" value="9">9</button>
-        <button class="operator" value="/">/</button>
+        <button class="operator" value="*">*</button>
         <button class="item item5" value="4">4</button>
         <button class="item item6" value="5">5</button>
         <button class="item item7" value="6">6</button>
-        <button class="operator" value="*">*</button>
+        <button class="operator" value="-">-</button>
         <button class="item item3" value="1">1</button>
         <button class="item item2" value="2">2</button>
         <button class="item item1" value="3">3</button>
-        <button class="operator" value="-">-</button>
-        <button class="item item0" value="0">0</button>
         <button class="operator" value="+">+</button>
+        <button class="item zero" value="0">0</button>
         <button class="operate" value="=">=</button>
+        <button class="item" value=".">.</button>        
+                
     </div>
     <script src="script.js"></script>
 </body>
