--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="display">
             <p>0</p>
         </div>        
-        <button class="clear" value="clear">C</button>        
+        <button class="clear" value="clear">CLR</button>        
         <div> </div>
         <button class="operator" value="/">/</button>        
         <button class="item item7" value="7">7</button>
