--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
         <div class="display">
             <p>0</p>
         </div>        
-        <button class="clear" value="clear">CLR</button>        
+        <button class="clear" id="Escape" value="clear">CLR</button>        
         <div> </div>
-        <button class="operator" value="/">/</button>        
-        <button class="item item7" value="7">7</button>
-        <button class="item item8" value="8">8</button>
-        <button class="item item9" value="9">9</button>
-        <button class="operator" value="*">*</button>
-        <button class="item item5" value="4">4</button>
-        <button class="item item6" value="5">5</button>
-        <button class="item item7" value="6">6</button>
-        <button class="operator" value="-">-</button>
-        <button class="item item3" value="1">1</button>
-        <button class="item item2" value="2">2</button>
-        <button class="item item1" value="3">3</button>
-        <button class="operator" value="+">+</button>
-        <button class="item zero" value="0">0</button>
-        <button class="operate" value="=">=</button>
-        <button class="item" value=".">.</button>        
+        <button class="operator" id="/" value="/">/</button>        
+        <button class="item item7" id="7" value="7">7</button>
+        <button class="item item8" id="8" value="8">8</button>
+        <button class="item item9" id="9" value="9">9</button>
+        <button class="operator" id="*" value="*">*</button>
+        <button class="item item5" id="4" value="4">4</button>
+        <button class="item item6" id="5" value="5">5</button>
+        <button class="item item7" id="6" value="6">6</button>
+        <button class="operator" id="-" value="-">-</button>
+        <button class="item item3" id="1" value="1">1</button>
+        <button class="item item2" id="2" value="2">2</button>
+        <button class="item item1" id="3" value="3">3</button>
+        <button class="operator" id="+" value="+">+</button>
+        <button class="item zero" id="0" value="0">0</button>
+        <button class="operate" id="Enter" value="=">=</button>
+        <button class="item" id="." value=".">.</button>        
                 
     </div>
     <script src="script.js"></script>
